Bug 1059174 - Allow ServiceWorkers over http on localhost, r=nsm